<resources>
    <string name="app_name">Profile Application</string>
    <string name="first_name" />
    <string name="fn_hint">First Name</string>
    <string name="last_name" />
    <string name="ln_hint">Last Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="full_name">Name:</string>
    <string name="gender_display" />
    <string name="edit">Edit</string>
</resources>
